syntax = "proto3";

package ubertool.trusted.api.v1;

option go_package = "ubertool-backend-trusted/api/gen/v1;ubertool_v1";


option java_multiple_files = true;
option java_package = "com.ubertool.trusted.api.v1";
option java_outer_classname = "NotificationServiceProto";

// Notification service
service NotificationService {
  // Get user notifications
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);

  // Mark notification as read
  rpc MarkNotificationRead(MarkNotificationReadRequest) returns (MarkNotificationReadResponse);
}

// Get notifications request
message GetNotificationsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

// Get notifications response
message GetNotificationsResponse {
  repeated Notification notifications = 1;
  int32 total_count = 2;
}

// Mark notification read request
message MarkNotificationReadRequest {
  int32 notification_id = 1;
}

// Mark notification read response
message MarkNotificationReadResponse {
  bool success = 1;
}

// Notification message
message Notification {
  int32 id = 1;
  int32 user_id = 2;
  int32 organization_id = 3;
  string title = 4;
  string message = 5;
  bool read = 6;
  string created_on = 7; // Date string YYYY-MM-DD
  map<string, string> attributes = 8; // Additional key-value attributes for notification metadata
}

